# tr_tool

./: .gitignore  Cargo.toml  images.data  readme.md  scratch.rs
assets/shaders/: face.wgsl
shared/: Cargo.toml
shared/src/: alloc.rs  geom.rs  lib.rs  min_max.rs  reinterpret.rs
src/: ext.rs  geom.rs  lib.rs  load.rs  main.rs  make.rs  ortho.rs  packing.rs  save_image.rs  vec_convert.rs  vtx_attr.rs
src/load/: mod.rs  tr2.rs  tr3.rs  tr4.rs
src/shader/: colored.wgsl  sprite.wgsl  textured.wgsl
tool2/: Cargo.toml  build.rs
tool2/src/: as_bytes.rs  data_writer.rs  double_end_cursor.rs  ext.rs  face_buffer.rs  face_writer.rs  fixed_vec.rs  geom_buffer.rs  gui.rs  keys.rs  main.rs  make.rs  multi_cursor.rs  render_model.rs  tr_traits.rs  vec_tail.rs  version_traits.rs  versions.rs
tool2/src/res/: icon16.data  icon24.data
tool2/src/shader/: mesh copy.wgsl  mesh.wgsl  room_quad.wgsl
tr_derive/: Cargo.toml
tr_derive/src/: attrs.rs  lib.rs  readable.rs
tr_model/: Cargo.toml  expanded.rs
tr_model/src/: generic.rs  lib.rs  padded_slice.rs.txt  shared.rs  tr1.rs  tr2.rs  tr3.rs  tr4.rs  tr5.rs  u16_cursor.rs
tr_readable/: Cargo.toml
tr_readable/src/: lib.rs
tr_reader/: Cargo.toml
tr_reader/src/: glam_impls.rs  impls.rs  lib.rs  tr4.rs
tr_reader/src/model/: mod.rs  tr2.rs  tr3.rs  tr4.rs
tr_tool/: Cargo.toml
tr_tool/src/: app.rs  as_bytes.rs  boxed_slice.rs  data_writer.rs  file_dialog.rs  geom_buffer.rs  gfx.rs  gui.rs  keys.rs  main.rs  make.rs  object_data.rs  print_error.rs  push_get.rs  render_resources.rs  tr_traits.rs  vec_convert.rs  wait.rs
tr_tool/src/core/: file_dialog.rs  keys.rs  loaded_level.rs  mod.rs
tr_tool/src/level/: counts.rs  geom_writer.rs  instance_writer.rs  maps.rs  mod.rs
tr_tool/src/level_parse/: counts.rs  geom_writer.rs  instance_writer.rs  maps.rs  mod.rs
tr_tool/src/load/: mod.rs  tr1.rs  tr2.rs  tr3.rs  tr4.rs
tr_tool/src/prj2/: enums.rs  floor_ceiling.rs  mod.rs  walls.rs  write.rs
tr_tool/src/shader/: mesh.wgsl  solid.wgsl  textured.wgsl
