[workspace]
members = ["tr_model", "tr_derive", "shared", "tool2", "tr_readable"]
resolver = "2"

[workspace.dependencies]
byteorder = "1.4.3"
glam = "0.27.0"
glam-traits = { version = "0.1.2", features = ["ext"] }
nonmax = "0.5.5"
num-traits = "0.2.18"
reinterpret = { git = "https://github.com/Ababwa/reinterpret.git" }
shared = { path = "shared" }
