[workspace]
members = ["tr_model", "tr_derive", "shared", "tool2", "tr_readable"]
resolver = "2"

[workspace.dependencies]
glam = "0.27.0"
glam-traits = { version = "0.1.2", features = ["ext"] }
nonmax = "0.5.5"
reinterpret = { git = "https://github.com/Ababwa/reinterpret.git" }
shared = { path = "shared" }
