[package]
name = "tr_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
bitfield = "0.14.0"
byteorder = { workspace = true }
compress = "0.2.1"
glam = { workspace = true }
glam-traits = { workspace = true }
nonmax = { workspace = true }
num-traits = { workspace = true }
shared = { workspace = true }
tr_derive = { path = "../tr_derive" }
