[package]
name = "tr_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
egui = "0.32.0"
egui-file-dialog = "0.11.0"
# egui-file-dialog = { git = "https://github.com/Ababwa/egui-file-dialog" }
egui-wgpu = "0.32.0"
egui-winit = "0.32.0"
glam = { workspace = true }
image = { version = "0.25.6", default-features = false, features = ["png"] }
leb128 = "0.2.5"
pollster = "0.4.0"
softbuffer = "0.4.6"
tr_model = { path = "../tr_model" }
wgpu = "25.0.2"
winit = "0.30.11"

[build-dependencies]
winresource = "0.1.22"
